[package]
name = "libp2p-identity"
version = "0.1.0"
authors = ["Wim Looman <wim@nemo157.com>"]

[dependencies]
mhash = { version = "0.3.0", features = ["generation", "validation", "sha2"] }
ring = { version = "0.12.1", features = ["rsa_signing"] }
untrusted = "0.5.0"
bytes = "0.4.6"
prost = { git = "https://github.com/Nemo157/prost", branch = "enumeration-as-enum" }
prost-derive = { git = "https://github.com/Nemo157/prost", branch = "enumeration-as-enum" }

[build-dependencies]
prost-build = { git = "https://github.com/Nemo157/prost", branch = "enumeration-as-enum" }
